--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,7 +13,9 @@
     "@vercel/postgres": "^0.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   }
